--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -186,6 +186,9 @@ body {
   .section{
     padding: 1rem 1.5rem !important;
   }
+  .mobile-padding{
+    padding: 0 0.75rem !important;
+  }
 }
 
 
